# pos-tech-machine-learning-tech-challenge

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  WORKFLOW_PATHS_FIXED.md
.github/workflows/: ci-cd.yml  ci.yml  docker-build-push.yml  fase0-bootstrap.yml  full-stack-deploy.yml  terraform-apply.yml  terraform-destroy.yml  terraform-plan.yml
db_setup/: README  query.py
fase_1/Gustavo/notebooks_eda/: eda.ipynb
fase_1/Gustavo/notebooks_eda/william/: .gitignore  01_eda_analysis.py  STATUS_FINAL_ETAPAS_1_2.txt  SUMARIO_ETAPAS_1_2.md  projeto-referencia.md
fase_1/Gustavo/notebooks_eda/william/docs/: RELATORIO_EDA.md  mapa_churn_estados_usa.html
fase_1/Joao/: README.md
fase_1/Joao/notebooks/: 01_eda.ipynb  02_baselines.ipynb
fase_1/Luana/: README.md  pyproject.toml
fase_1/Luana/docs/: ml_canvas_template.md  stage1_definition.md
fase_1/Luana/notebooks/: 01_eda_baselines.ipynb  README.md
fase_1/Luana/notebooks/docs/: stage1_eda_summary.json
fase_1/Luana/src/churn_stage1/: __init__.py  predict.py  stage1_baselines.py
fase_1/William/: 02_train_baselines.py  DOCUMENTACAO_COMPLETA.md  INDICE_ARQUIVOS.md  Makefile  README.md  README_ENGENHARIA.md  check_structure.py  prompt.md  pyproject.toml  requirements-prod.txt  requirements.txt  validate_tests.py
fase_1/William/docs/: ARQUITETURA_DEPLOY.md  DICIONARIO_DADOS.md  MODEL_CARD.md  RELATORIO_EDA.md  mapa_churn_geografico.html
fase_1/William/notebooks/: 01_eda_and_ml_canvas.ipynb  02_baseline_models.ipynb
fase_1/William/src/: __init__.py  config.py  logging_config.py
fase_1/William/src/api/: feature_transformer.py  main.py  schemas.py
fase_1/William/src/data/: __init__.py  loader.py  preprocessing.py
fase_1/William/src/models/: baseline.py  inference.py
fase_1/William/tests/: conftest.py  test_config.py  test_preprocessing.py
fase_1/mlruns/902939403551464315/: meta.yaml
fase_1/tech_challenge/: .dockerignore  .gitignore  DOCKER_GUIA_EXECUCAO.md  Dockerfile  Dockerfile.mlflow  ETAPA_3_RESUMO.txt  FASE_0_ACAO_IMEDIATA.md  GITHUB_ACTIONS_SETUP.md  Makefile  docker-compose.yml  mlflow.db  push.sh  pyproject.toml  requirements-dev.txt  requirements.txt  ruff.toml  scratch.py
fase_1/tech_challenge/.github/workflows/: ci.yml  docker-build-push.yml  fase0-bootstrap.yml  full-stack-deploy.yml
fase_1/tech_challenge/backup/: README.md
fase_1/tech_challenge/data/: README.md
fase_1/tech_challenge/data/processed/: telco_churn_processed.csv
fase_1/tech_challenge/docs/: ARQUITETURA_DEPLOY.md  DICIONARIO_DADOS.md  DOCUMENTACAO_COMPLETA.md  MODEL_CARD.md  PLANO_MONITORAMENTO.md  RELATORIO_EDA.md  TERRAFORM_AWS_PLAN.md  mapa_churn_estados_usa.html  mapa_churn_geografico.html  ml_canvas.md
fase_1/tech_challenge/infrastructure/: README.md
fase_1/tech_challenge/infrastructure/scripts/: fase0-bootstrap.sh  iam-policy.json
fase_1/tech_challenge/infrastructure/terraform/: main.tf
fase_1/tech_challenge/infrastructure/terraform/environments/production/: backend.tf  terraform.tfvars
fase_1/tech_challenge/infrastructure/terraform/environments/staging/: backend.tf  terraform.tfvars
fase_1/tech_challenge/infrastructure/terraform/modules/batch/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/cloudfront/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/cloudwatch/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/ecr/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/ecs/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/iam/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/lambda/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/rds/: main.tf  outputs.tf  variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/route53/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/s3/: variables.tf
fase_1/tech_challenge/infrastructure/terraform/modules/vpc/: main.tf  outputs.tf  variables.tf
fase_1/tech_challenge/models/: best_model_with_metadata.pkl  test_model.pkl
fase_1/tech_challenge/notebooks/: 01_eda_analysis.py  01_eda_and_ml_canvas.ipynb  02_experimento_controlado.ipynb  README.md
fase_1/tech_challenge/plano_ci_cd/: CHECKLIST_PRE_DEPLOYMENT.md  PLANO_AWS_MLFLOW.md  RESUMO_EXECUTIVO.md
fase_1/tech_challenge/src/: README.md  __init__.py  config.py  logging_config.py
fase_1/tech_challenge/src/api/: README.md  __init__.py  main.py  model_utils.py  schemas.py
fase_1/tech_challenge/src/data/: README.md  loader.py  preprocessing.py
fase_1/tech_challenge/src/evaluation/: README.md  __init__.py  metrics.py
fase_1/tech_challenge/src/models/: README.md  __init__.py  base_pipeline.py  baseline.py  best_mlp_model.pth  inference.py  model_training_pipeline.py  model_traning.py  pipeline.py  transformers.py
fase_1/tech_challenge/tests/: README.md  conftest.py  test_api.py  test_baseline.py  test_config.py  test_inference.py  test_loader.py  test_logging_config.py  test_metrics.py  test_models.py  test_preprocessing.py  test_training.py  test_transformers.py
frontend/: index.html
mlruns/0/280b366d26464e76b454e08094c80eb9/artifacts/: classification_report.json
mlruns/0/3fd073c105a34343a9692d56fe224ec6/artifacts/: data_info.json
mlruns/0/6bd016c66d4f46feb518098fd9b3517b/artifacts/: model_info.json
mlruns/0/b9aeba2aebf14282996a4623a824cd65/artifacts/: confusion_matrix.json
mlruns/0/b9aeba2aebf14282996a4623a824cd65/artifacts/data/: X_test.csv
mlruns/0/dd21ddac6fbd4fb686672766ba828ca6/artifacts/data/: X_train.csv  y_train.csv
mlruns/0/e67d12bd1856442aa799ff3b545cf1ce/artifacts/data/: y_test.csv
notebooks_eda/: gustavo_eda.ipynb
