[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tech-challenge-churn"
version = "0.1.0"
description = "Tech Challenge Fase 1: EDA e baselines de churn com MLflow"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pandas>=2.2.2",
  "numpy>=1.26.4",
  "openpyxl>=3.1.5",
  "scikit-learn>=1.5.0",
  "mlflow>=2.14.3",
  "jupyter>=1.0.0",
  "matplotlib>=3.9.0",
  "seaborn>=0.13.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
  "ruff>=0.5.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
