[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "telco-churn-prediction"
version = "0.1.0"
description = "Rede Neural para Previsão de Churn - MLOps Pipeline Profissional"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Equipe de ML", email = "estudoswill@gmail.com"}
]
license = {text = "MIT"}
keywords = ["machine-learning", "churn-prediction", "pytorch", "mlops"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scikit-learn>=1.3.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pydantic>=2.0.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "mlflow>=2.10.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "xgboost>=2.0.0",
    "lightgbm>=4.0.0",
    "imbalanced-learn>=0.12.0",
    "httpx>=0.28.1",
    "imblearn>=0.0",
    "imblearn",
    "pytest-cov>=7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.10.0",
    "ruff>=0.1.0",
    "mypy>=1.6.0",
    "isort>=5.12.0",
    "jupyter>=1.0.0",
    "ipython>=8.16.0",
    "fastapi[standard]>=0.112.0"
]

ml = [
    "fairlearn>=0.10.0",
    "optuna>=3.14.0",
    "shap>=0.43.0"
]

[project.urls]
Homepage = "https://github.com/seu-user/telco-churn-prediction"
Documentation = "https://github.com/seu-user/telco-churn-prediction/tree/main/docs"
Repository = "https://github.com/seu-user/telco-churn-prediction"
Issues = "https://github.com/seu-user/telco-churn-prediction/issues"

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | notebooks
)/
'''

[tool.ruff]
target-version = "py310"
line-length = 100
select = [
    "E", "F", "W",  # pycodestyle, Pyflakes, pycodestyle warnings
    "I",            # isort
    "UP",           # pyupgrade
    "B",            # flake8-bugbear
    "A",            # flake8-builtins
    "C4",           # flake8-comprehensions
    "PT",           # flake8-pytest-style
    "SIM",          # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "W191",  # indentation contains tabs
]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "notebooks",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-ra --strict-markers --tb=short --cov=src --cov-report=html --cov-report=term-missing --cov-report=xml"
filterwarnings = [
    "ignore::DeprecationWarning",
]
markers = [
    "unit: unit tests",
    "integration: integration tests",
    "smoke: smoke tests",
    "slow: slow tests",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
follow_imports = "normal"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.isort]
profile = "black"
line_length = 100
multi_line_mode = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
split_on_comma = false
skip_glob = ["*/migrations/*"]
known_first_party = ["src"]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/site-packages/*",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
]
precision = 2
show_missing = true
skip_empty = true
skip_covered = false

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "pre-commit>=4.6.0",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.12",
]

[tool.ruff.isort]
known-first-party = ["src"]
multi-line-mode = 3
include-trailing-comma = true
force-grid-wrap = 0
use-parentheses = true
ensure-newline-before-comments = true
line-length = 100
